Add new features and contact information to news.txt

--- a/news.txt
+++ b/news.txt
@@ -1,3 +1,6 @@
 🔔 CHÀO MỪNG ĐẠO HỮU ĐẾN VỚI TGP PRO TOOL
 ⚡ BẢN CẬP NHẬT MỚI: Đã thêm tính năng nạp Tiếng Việt
 💎 LIÊN HỆ ADMIN: Zalo 0965.888.979 để thuê ACC VIP
+🔥 “Tu tiên thời đại số – Mạnh lên từng cú click”
+🔮 “Không cần linh căn, chỉ cần… TGP PRO”
+⚡ “Click một cái – Đột phá cảnh giới”
